# django-codegen

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
django_codegen/: generate.py
django_codegen/lib/: codegen.py
