[tool.poetry]
name = "django-codegen"
version = "0.1.0"
description = "Generate django code"
authors = ["Vidir Valberg Gudmundsson <valberg@orn.li>"]
packages = [
    { include = "django_codegen" },
]

[tool.poetry.dependencies]
python = "^3.8"
black = "^19.10b0"
jinja2 = "^2.11.2"
rich = "^3.0.3"
typer = "^0.3.0"
django = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
mypy = "^0.782"

[tool.poetry.scripts]
django-codegen = "django_codegen.generate:app"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

